--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -176,6 +176,12 @@
     <string name="finalize">Finalize</string>
     <!-- Button text for sending a submission. -->
     <string name="send">Send</string>
+    <!-- smap: Label for form name input field at end of form -->
+    <string name="save_form_as">Name this form</string>
+    <!-- smap: Checkbox to mark form as finalized at end of form -->
+    <string name="mark_finished">Mark form as finalized</string>
+    <!-- smap: Button text for saving form and exiting -->
+    <string name="quit_entry">Save Form and Exit</string>
 
     <string name="data_saved_error">Sorry, form save failed!</string>
     <string name="data_saved_ok">Form successfully saved!</string>
