--- a/strings/src/main/res/values/strings.xml
+++ b/strings/src/main/res/values/strings.xml
@@ -1477,4 +1477,12 @@
     <string name="newer_finalized_edit_found_dialog_positive_button">Edit latest form</string>
     <!-- Text for the snackbar shown when editing of a finalized form begins -->
     <string name="finalized_form_edit_started">You are now editing this form. Tap on a question to start editing.</string>
+
+    <!-- Geocompound widget button labels (SMAP) -->
+    <string name="get_geocompound">Start Compound Map</string>
+    <string name="geocompound_view_change_location">View or Change Compound Map</string>
+    <string name="geocompound_view_read_only">View Compound Map</string>
+    <string name="geocompound_title">Compound Map</string>
+    <string name="smap_set_marker">Set Marker</string>
+    <string name="smap_apply">Apply</string>
 </resources>
