--- a/strings/src/main/res/values-zh/strings.xml
+++ b/strings/src/main/res/values-zh/strings.xml
@@ -140,6 +140,7 @@
   <string name="finalize">最终确定</string>
   <!--Button text for sending a submission.-->
   <string name="send">提交</string>
+    <string name="quit_entry">保存表单并退出</string>
   <string name="data_saved_error">表单保存失败!</string>
   <string name="data_saved_ok">表单已成功保存!</string>
   <string name="save_point_error">保存恢复点时出错：%s</string>
