--- a/strings/src/main/res/values-am/strings.xml
+++ b/strings/src/main/res/values-am/strings.xml
@@ -84,6 +84,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">ቅጹን አስቀምጥ እና ውጣ</string>
   <string name="data_saved_error">ይቅርታ፣ ቅፁን ማስቀመጥ አልተሳካም!</string>
   <string name="data_saved_ok">ቅፁ በተሳካ ሁኔታ ተቀምጧል!</string>
   <string name="save_point_error">የመልሶ ማግኛ ነጥብ ማስቀመጥ አልተቻለም፡ 1 %s</string>
