--- a/strings/src/main/res/values-cs/strings.xml
+++ b/strings/src/main/res/values-cs/strings.xml
@@ -140,6 +140,7 @@
   <string name="finalize">Dokončit</string>
   <!--Button text for sending a submission.-->
   <string name="send">Odeslat</string>
+    <string name="quit_entry">Uložit formulář a ukončit</string>
   <string name="data_saved_error">Uložení dotazníku selhalo!</string>
   <string name="data_saved_ok">Dotazník úspěšně uložen!</string>
   <string name="save_point_error">Chyba při ukládání bodu obnovení: %s</string>
