--- a/strings/src/main/res/values-hi/strings.xml
+++ b/strings/src/main/res/values-hi/strings.xml
@@ -94,6 +94,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">फ़ॉर्म सहेजें और बाहर निकलें</string>
   <string name="data_saved_error">क्षमा करें, फॉर्म संरक्षण असफल!</string>
   <string name="data_saved_ok">फॉर्म सफलतापूर्वक संरक्षित!</string>
   <string name="save_point_error">रिकवरी बिंदु %sसंरक्षण में त्रुटि है  </string>
