--- a/strings/src/main/res/values-no/strings.xml
+++ b/strings/src/main/res/values-no/strings.xml
@@ -79,6 +79,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">Lagre skjema og avslutt</string>
   <string name="data_saved_error">Beklager, skjemalagring mislyktes!</string>
   <string name="data_saved_ok">Skjema lagret!</string>
   <string name="save_point_error">Feil under lagring av gjenopprettingspunkt: %s</string>
