--- a/strings/src/main/res/values-ps/strings.xml
+++ b/strings/src/main/res/values-ps/strings.xml
@@ -64,6 +64,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">فورم خوندي کړئ او ووځئ</string>
   <string name="data_saved_error">اوبخښی، د فورمي ثبتول ناکامه شو!</string>
   <string name="data_saved_ok">فورمه په بریالی توکه ثبت شو!</string>
   <string name="save_point_error">د خطا ثبت بیا موندولو نښه: %s</string>
