--- a/strings/src/main/res/values-rw/strings.xml
+++ b/strings/src/main/res/values-rw/strings.xml
@@ -114,6 +114,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">Bika ifishi kandi uvemo</string>
   <string name="data_saved_error">Mwihangane, kubika amakuru byanze! </string>
   <string name="data_saved_ok">Amakuru yabitswe! </string>
   <string name="save_point_error">Ikosa mukwisevinga biragaruka: %s</string>
