--- a/strings/src/main/res/values-sv-rSE/strings.xml
+++ b/strings/src/main/res/values-sv-rSE/strings.xml
@@ -110,6 +110,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">Spara formulär och avsluta</string>
   <string name="data_saved_error">Tyvärr, formuläret kunde inte sparas!</string>
   <string name="data_saved_ok">Formuläret har sparats!</string>
   <string name="save_point_error">Fel vid sparande av återställningspunkt: %s</string>
