--- a/strings/src/main/res/values-sw-rKE/strings.xml
+++ b/strings/src/main/res/values-sw-rKE/strings.xml
@@ -84,6 +84,7 @@
   <!--Button text for saving as draft-->
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
+  <string name="quit_entry">Hifadhi fomu na uondoke</string>
   <string name="data_saved_error">Samahani, fomu haikuhifadhiwa!</string>
   <string name="data_saved_ok">Fomu imehifadhiwa!</string>
   <string name="save_point_error">Hitilafu imetokea kwa ncha ya urejesho: %s</string>
