--- a/strings/src/main/res/values-th-rTH/strings.xml
+++ b/strings/src/main/res/values-th-rTH/strings.xml
@@ -96,6 +96,7 @@
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
   <string name="send">ส่งแบบสำรวจ</string>
+    <string name="quit_entry">บันทึกแบบฟอร์มและออก</string>
   <string name="data_saved_error">ขออภัย ไม่สามารถบันทึกแบบสำรวจได้</string>
   <string name="data_saved_ok">บันทึกแบบสำรวจเรียบร้อยแล้ว</string>
   <string name="save_point_error">มีข้อผิดพลาดในการบันทึกจุดย้อนคืน : %s</string>
