--- a/strings/src/main/res/values-ur/strings.xml
+++ b/strings/src/main/res/values-ur/strings.xml
@@ -131,6 +131,7 @@
   <string name="finalize">فائنل کریں</string>
   <!--Button text for sending a submission.-->
   <string name="send">بھیجیں</string>
+    <string name="quit_entry">فارم محفوظ کریں اور باہر نکلیں</string>
   <string name="data_saved_error">معذرت, فارم محفوظ نہیں ہوسکا</string>
   <string name="data_saved_ok">فارم کامیابی سے محفوظ ہو گیا</string>
   <string name="save_point_error">ریکوری پوانٹ سیو کرتے وقت خرابی: %s</string>
