--- a/strings/src/main/res/values-zh-rTW/strings.xml
+++ b/strings/src/main/res/values-zh-rTW/strings.xml
@@ -131,6 +131,7 @@
   <string name="finalize">確定完成</string>
   <!--Button text for sending a submission.-->
   <string name="send">傳送</string>
+    <string name="quit_entry">儲存表單並退出</string>
   <string name="data_saved_error">表格儲存失敗!</string>
   <string name="data_saved_ok">表格已成功儲存!</string>
   <string name="save_point_error">錯誤！儲存還原點文件：%s</string>
