--- a/strings/src/main/res/values-et/strings.xml
+++ b/strings/src/main/res/values-et/strings.xml
@@ -85,6 +85,7 @@
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
   <string name="quit_entry">Salvesta vorm ja välju</string>
+    <string name="mark_finished">Märgi vorm lõpetatuks</string>
   <string name="data_saved_error">Kahjuks ebaõnnestus vormi salvestamine!</string>
   <string name="data_saved_ok">Vorm on edukalt salvestatud!</string>
   <string name="save_point_error">Vea parndamise taastuspunkt %s </string>
