--- a/strings/src/main/res/values-km/strings.xml
+++ b/strings/src/main/res/values-km/strings.xml
@@ -120,6 +120,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">ផ្ញើ</string>
     <string name="quit_entry">រក្សាទុកបែបបទ ហើយចាកចេញ</string>
+    <string name="mark_finished">សម្គាល់សំណុំបែបបទថាបានបញ្ចប់</string>
   <string name="data_saved_error">សុំទោស, រក្សា​ទុកសំណុំ​បែបបទ​មិន​បាន​សម្រេច!</string>
   <string name="data_saved_ok">បាន​រក្សាទុកសំណុំ​បែបបទ​ដោយ​ជោគជ័យ!</string>
   <string name="save_point_error">បញ្ហាក្នុងការរក្សាទុកនូវចំនុចស្តារឡើងវិញ: %s</string>
