--- a/strings/src/main/res/values-bn/strings.xml
+++ b/strings/src/main/res/values-bn/strings.xml
@@ -73,6 +73,7 @@
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
   <string name="quit_entry">ফর্ম সংরক্ষণ করুন এবং বের হন</string>
+    <string name="mark_finished">ফরম চূড়ান্ত হিসেবে চিন্হিত করুন</string>
   <string name="data_saved_error">দু:খিত, ফরম সংরক্ষিত হয়নি</string>
   <string name="data_saved_ok">ফরম সংরক্ষিত হয়েছে</string>
   <string name="save_point_error">ত্রুটি সংরক্ষণ উদ্ধার পয়েন্টঃ %s</string>
