--- a/strings/src/main/res/values-cs/strings.xml
+++ b/strings/src/main/res/values-cs/strings.xml
@@ -141,6 +141,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Odeslat</string>
     <string name="quit_entry">Uložit formulář a ukončit</string>
+    <string name="mark_finished">Označit dotazník jako dokončený</string>
   <string name="data_saved_error">Uložení dotazníku selhalo!</string>
   <string name="data_saved_ok">Dotazník úspěšně uložen!</string>
   <string name="save_point_error">Chyba při ukládání bodu obnovení: %s</string>
