--- a/strings/src/main/res/values-de/strings.xml
+++ b/strings/src/main/res/values-de/strings.xml
@@ -141,6 +141,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Senden</string>
     <string name="quit_entry">Formular speichern und beenden</string>
+    <string name="mark_finished">Formular als vollständig markieren</string>
   <string name="data_saved_error">Speichervorgang gescheitert!</string>
   <string name="data_saved_ok">Speichervorgang erfolgreich!</string>
   <string name="save_point_error">Fehler beim Speichern des Wiederherstellungspunkts: %s</string>
