--- a/strings/src/main/res/values-es-rSV/strings.xml
+++ b/strings/src/main/res/values-es-rSV/strings.xml
@@ -10,4 +10,5 @@
   <!--http://docs.oracle.com/javase/6/docs/api/java/text/SimpleDateFormat.html-->
   <!--Geo string added in feature-geofeatures branch-->
   <string name="quit_entry">Guardar formulario y salir</string>
+    <string name="mark_finished">Marcar el formulario como finalizado</string>
 </resources>
