--- a/strings/src/main/res/values-es/strings.xml
+++ b/strings/src/main/res/values-es/strings.xml
@@ -145,6 +145,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Enviar</string>
     <string name="quit_entry">Guardar formulario y salir</string>
+    <string name="mark_finished">Marcar el formulario como finalizado</string>
   <string name="data_saved_error">¡Atención, el formulario no se ha guardado correctamente!</string>
   <string name="data_saved_ok">Formulario guardado correctamente</string>
   <string name="save_point_error">Error al guardar punto de recuperación: %s</string>
