--- a/strings/src/main/res/values-fi/strings.xml
+++ b/strings/src/main/res/values-fi/strings.xml
@@ -141,6 +141,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Lähetä</string>
     <string name="quit_entry">Tallenna lomake ja poistu</string>
+    <string name="mark_finished">Merkitse lomake valmiiksi</string>
   <string name="data_saved_error">Pahoittelut, lomakkeen tallennus epäonnistui!</string>
   <string name="data_saved_ok">Lomake tallennettu!</string>
   <string name="save_point_error">Virhe tallentaessa palautuspistettä: %s</string>
