--- a/strings/src/main/res/values-in/strings.xml
+++ b/strings/src/main/res/values-in/strings.xml
@@ -141,6 +141,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Kirim</string>
     <string name="quit_entry">Simpan formulir dan keluar</string>
+    <string name="mark_finished">Tandai formulir telah terfinalisasi</string>
   <string name="data_saved_error">Maaf, tidak berhasil menyimpan formulir.</string>
   <string name="data_saved_ok">Formulir berhasil disimpan.</string>
   <string name="save_point_error">Terjadi kesalahan saat menyimpan titik pemulihan: %s</string>
