--- a/strings/src/main/res/values-ln/strings.xml
+++ b/strings/src/main/res/values-ln/strings.xml
@@ -392,4 +392,5 @@
   <!--Text for the dialog positive button displayed when a user attempts to edit a finalized form and a newer finalized version exists-->
   <!--Text for the snackbar shown when editing of a finalized form begins-->
   <string name="quit_entry">Bómba formulɛ mpe kobima</string>
+    <string name="mark_finished">Sala formulɛ lokola ekomi pɛ</string>
 </resources>
