--- a/strings/src/main/res/values-nl/strings.xml
+++ b/strings/src/main/res/values-nl/strings.xml
@@ -124,6 +124,7 @@
   <!--Button text for sending a submission.-->
   <string name="send">Verzend</string>
     <string name="quit_entry">Formulier opslaan en afsluiten</string>
+    <string name="mark_finished">Definitief maken</string>
   <string name="data_saved_error">Sorry, formulier opslaan mislukt!</string>
   <string name="data_saved_ok">Formulier is opgeslagen!</string>
   <string name="save_point_error">Fout bij maken herstelpunt: %s</string>
