--- a/strings/src/main/res/values-ro/strings.xml
+++ b/strings/src/main/res/values-ro/strings.xml
@@ -82,6 +82,7 @@
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
   <string name="quit_entry">Salvați formularul și ieșiți</string>
+    <string name="mark_finished">Marcați formularul ca finalizat</string>
   <string name="data_saved_error">Ne pare rău, salvarea formularului nu a reușit!</string>
   <string name="data_saved_ok">Salvarea formularului a reușit!</string>
   <string name="save_point_error">Eroare la salvarea punctului de recuperare: %s</string>
