--- a/strings/src/main/res/values-so/strings.xml
+++ b/strings/src/main/res/values-so/strings.xml
@@ -396,4 +396,5 @@
   <!--Text for the dialog positive button displayed when a user attempts to edit a finalized form and a newer finalized version exists-->
   <!--Text for the snackbar shown when editing of a finalized form begins-->
   <string name="quit_entry">Kaydi foomka oo ka bax</string>
+    <string name="mark_finished">Calaamadee foomka sida la dhameeyay</string>
 </resources>
