--- a/strings/src/main/res/values-sq/strings.xml
+++ b/strings/src/main/res/values-sq/strings.xml
@@ -100,6 +100,7 @@
   <!--Button text for finalizing a submission. Displayed instead of "Send" when auto-send is off or the device is offline-->
   <!--Button text for sending a submission.-->
   <string name="quit_entry">Ruaj formularin dhe dil</string>
+    <string name="mark_finished">Shëno formularin si të përfunduar</string>
   <string name="data_saved_error">Ndjesë, ruajtja e formualrit dështoi!</string>
   <string name="data_saved_ok">Formulari u ruajt me sukses!</string>
   <string name="save_point_error">Gabim në ruajtjen e pikës së shpëtimit: %s</string>
