--- a/strings/src/main/res/values-ti/strings.xml
+++ b/strings/src/main/res/values-ti/strings.xml
@@ -390,4 +390,5 @@
   <!--Text for the dialog positive button displayed when a user attempts to edit a finalized form and a newer finalized version exists-->
   <!--Text for the snackbar shown when editing of a finalized form begins-->
   <string name="quit_entry">ቅጽን ዕቀብ ናብ ወጻኢ ኺድ</string>
+    <string name="mark_finished">ቅጽን ከምዝተወደአ ምልክት ግበር</string>
 </resources>
