--- a/strings/src/main/res/values-tl-rPH/strings.xml
+++ b/strings/src/main/res/values-tl-rPH/strings.xml
@@ -17,6 +17,7 @@
   <string name="clear_answer_no">Urong</string>
   <string name="data">Mga Inimpok na Form</string>
   <string name="quit_entry">I-save ang Form at Lumabas</string>
+    <string name="mark_finished">Markahan Yari ang Form</string>
   <string name="data_saved_error">Paumanhin, nabigo ang pag-impok ng form!</string>
   <string name="data_saved_ok">Matagumpay na inimpok ang Form!</string>
   <string name="delete_confirm">Burahin ang %s form(s)?</string>
