--- a/strings/src/main/res/values-ur-rPK/strings.xml
+++ b/strings/src/main/res/values-ur-rPK/strings.xml
@@ -66,6 +66,7 @@
   <string name="required_answer_error">معافی، یہ جواب دینا ضروری ہے</string>
   <string name="save_enter_data_description">آپ ‎%s‏ کے آخر پر ہیں۔</string>
   <string name="quit_entry">فارم محفوظ کریں اور باہر نکلیں</string>
+    <string name="mark_finished">فارم کو حتمی کردیں</string>
   <string name="data_saved_error">معافی, فارم محفوظ نہیں ہوسکا</string>
   <string name="data_saved_ok">فارم کامیابی سے محفوظ کیا گیا</string>
   <string name="save_point_error">ریکوری پوانٹ سیو کرتے وقت خرابی: %s</string>
